syntax = "proto3";

//option java_multiple_files = true;
option java_package = "io.grpc.examples.addressbook";
option java_outer_classname = "AddressBookProto";
//option objc_class_prefix = "ADDB";

package addressbook;

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType phone_type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}